# aviary

./: CMakeLists.txt  README.md  aviary.repos  package.xml
.github/workflows/: ci.yaml
config/calibration-2024-03/: 17408093.yaml  18025945.yaml  18025950.yaml  18057298.yaml  18057299.yaml  18057303.yaml  18057304.yaml  18288153.yaml  18288156.yaml  23199575.yaml
include/aviary/: bag_processor.hpp  message_processor.hpp
launch/: apriltag_detector.launch.py  audio.launch.py  cam_sync.launch.py  cam_sync_with_recorder.launch.py  rfid_reader.launch.py  single_camera.launch.py  start_recording.launch.py  video_and_audio.launch.py
src/: bag_to_wave.cpp  modify_bag_meta.py  start_recording.py  stop_recording.py
src/cron/: start_recording.bash  start_rfid_reader.bash  start_video_audio.bash  stop_recording.bash  stop_rfid_reader.bash  stop_video_audio.bash
