<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aviary</name>
  <version>1.0.0</version>
  <description>aviary source code</description>
  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros_environment</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>audio_common_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
